[project]
name = "tg-kksocial"
version = "0.1.0"
description = ""
authors = [{ name = "Ilia Novikov", email = "closypost@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pytelegrambotapi (>=4.31.0,<5.0.0)", "python-dotenv (>=1.2.2,<2.0.0)"]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
